<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        -->
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/item_profile" />

        <item
            android:id="@+id/nav_alter_password"
            android:icon="@drawable/ic_lock"
            android:title="@string/item_alter_password" />

        <item
            android:id="@+id/nav_delete_acc"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/item_delete_account" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/item_logout" />
    </group>
    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
