<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.versalius.iking.activities.SingupActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_pic_placeholder"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <ImageButton
                    android:id="@+id/btGetImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/circular_button"
                    android:padding="7dp"
                    android:src="@drawable/ic_camera" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_full_name"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/hint_email_required"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pbEmailCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:focusable="false"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/ivEmailCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:focusable="false"
                    android:src="@drawable/ic_check"
                    android:tint="#ccc" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_birth_date"
                    android:inputType="text|date" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/lb_identification"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rgIdentification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <RadioButton
                    android:id="@+id/rbRG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lb_RG" />

                <RadioButton
                    android:id="@+id/rbPassport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_passport" />
            </RadioGroup>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilIdentification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etIdentification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilShippingAgent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etShippingAgent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_shipping_agent"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etCpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/hint_cpf"
                        android:inputType="phone"
                        android:maxLength="14" />
                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pbCpfCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:focusable="false"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/ivCpfCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:focusable="false"
                    android:src="@drawable/ic_check"
                    android:tint="#ccc" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_nationality"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etProfession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_profession"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/lb_gender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRgErrMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_msg_must_select_one"
                android:textColor="@color/err_msg"
                android:textSize="12sp"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_radio_male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_radio_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hint_continent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSpContinentErrMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_msg_must_select_continent"
                android:textColor="@color/err_msg"
                android:textSize="12sp"
                android:visibility="gone" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hint_country"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSpCountryErrMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_msg_must_select_country"
                android:textColor="@color/err_msg"
                android:textSize="12sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hint_state"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSpStateErrMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_msg_must_select_state"
                android:textColor="@color/err_msg"
                android:textSize="12sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/hint_city_required"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSpCityErrMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/err_msg_must_select_city"
                android:textColor="@color/err_msg"
                android:textSize="12sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_street"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_number"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNeighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNeighborhood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_neighborhood"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_zip_code"
                    android:inputType="phone"
                    android:maxLength="9" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLength="14" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btEdit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:text="@string/title_edit" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
