<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_login_horizontal_margin"
    android:paddingRight="@dimen/activity_login_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.versalius.iking.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/round_corner_layout"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_service"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <View style="@style/AppTheme.Divider" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_city"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/logo" />
    </FrameLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btSearch"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="BUSCAR"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:text="@string/copyright" />

</RelativeLayout>
